# convo

./: .gitignore  LICENSE  README.md  pyproject.toml
convo/main/: HandTrackingModule.py  Main.py
src/convo/main/: dataCollection.py  handSignDetection.py  main.py
src/convo/model/: keras_model.h5  keras_model2.h5  labels.txt  labels2.txt
src/convo/utils/: classificationModule.py  handTrackingModule.py
