[tool.poetry]
name = "convo"
version = "0.1.0"
description = ""
authors = ["AmitHalpert"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mediapipe = "^0.9.0.1"
opencv-python = "^4.7.0.68"
tensorflow = "^2.11.0"

[tool.poetry.scripts]
start = "convo.main.dataCollection:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
